test/sc++/error/cshift-expr.scpp
../../scc/error/cshift-expr.sc